[package]
name = "replace-env"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/replace-env"
description = """
Replace env variables.
"""
categories = ["configuration"]
keywords = ["properties", "app-properties", "configuration", "env"]

[dependencies]
derive-replace-env = { workspace = true }
tracing = "0.1"
